1.实现了Reader的View功能(ReaderBorrow.java, ReaderBorrowDao.java,ReaderBorrowServlet.java,reader_view.jsp 2.封装了reader的侧边栏reader_view.jsp

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -140,5 +140,13 @@
         <servlet-name>EditReader</servlet-name>
         <url-pattern>/EditReader.do</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>BorrowHistory</servlet-name>
+        <servlet-class>servlet.ReaderBorrowServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>BorrowHistory</servlet-name>
+        <url-pattern>/BorrowHistory.do</url-pattern>
+    </servlet-mapping>
 <!--    end -->
 </web-app>
