--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,6 +44,14 @@
         <url-pattern>/EditLibrarian.do</url-pattern>
     </servlet-mapping>
     <servlet>
+        <servlet-name>DeleteLibrarian</servlet-name>
+        <servlet-class>servlet.LibrarianDeleteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DeleteLibrarian</servlet-name>
+        <url-pattern>/DeleteLibrarian.do</url-pattern>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>SearchLibrarian</servlet-name>
         <servlet-class>servlet.LibrarianSearchServlet</servlet-class>
     </servlet>
