--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -52,6 +52,15 @@
         <url-pattern>/SearchLibrarian.do</url-pattern>
     </servlet-mapping>
     <servlet>
+        <servlet-name>ReaderSearchServlet</servlet-name>
+        <servlet-class>servlet.ReaderSearchServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ReaderSearchServlet</servlet-name>
+        <url-pattern>/ReaderSearchServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>BookCategoryAdd</servlet-name>
         <servlet-class>servlet.BookCategoryAddServlet</servlet-class>
     </servlet>
@@ -75,6 +84,16 @@
         <servlet-name>BookCategoryEdit</servlet-name>
         <url-pattern>/BookCategoryEdit.do</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>BookCategoryDelete</servlet-name>
+        <servlet-class>servlet.BookCategoryDeleteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>BookCategoryDelete</servlet-name>
+        <url-pattern>/BookCategoryDelete.do</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>BookAdd</servlet-name>
         <servlet-class>servlet.BookAddServlet</servlet-class>
@@ -115,31 +134,49 @@
         <servlet-name>AdminChangeSettingsServlet</servlet-name>
         <url-pattern>/AdminChangeSettingsServlet.do</url-pattern>
     </servlet-mapping>
-
-<!--   reader  -->
+    <servlet>
+        <servlet-name>AddBookByISBN</servlet-name>
+        <servlet-class>servlet.BookAddByISBNSrvelet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AddBookByISBN</servlet-name>
+        <url-pattern>/AddBookByISBN.do</url-pattern>
+    </servlet-mapping>
+<!--    add reader  -->
     <servlet>
         <servlet-name>ReaderAdd</servlet-name>
         <servlet-class>servlet.ReaderAddServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>ReaderAdd</servlet-name>
-        <url-pattern>/ReaderAdd.do</url-pattern>
+        <url-pattern>/reader_add.do</url-pattern>
     </servlet-mapping>
+
     <servlet>
-    <servlet-name>ReaderEdit</servlet-name>
-    <servlet-class>servlet.ReaderEditServlet</servlet-class>
-</servlet>
+        <servlet-name>EditReader</servlet-name>
+        <servlet-class>servlet.ReaderEditServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
-        <servlet-name>ReaderEdit</servlet-name>
-        <url-pattern>/ReaderEdit.do</url-pattern>
+        <servlet-name>EditReader</servlet-name>
+        <url-pattern>/EditReader.do</url-pattern>
     </servlet-mapping>
+
     <servlet>
-        <servlet-name>ReaderDelete</servlet-name>
+        <servlet-name>DeleteReader</servlet-name>
         <servlet-class>servlet.ReaderDeleteServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ReaderDelete</servlet-name>
-        <url-pattern>/ReaderDelete.do</url-pattern>
+        <servlet-name>DeleteReader</servlet-name>
+        <url-pattern>/DeleteReader.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>BookList</servlet-name>
+        <servlet-class>servlet.BookListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>BookList</servlet-name>
+        <url-pattern>/BookList.do</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>ReaderList</servlet-name>
@@ -149,4 +186,13 @@
         <servlet-name>ReaderList</servlet-name>
         <url-pattern>/ReaderList.do</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>BorrowHistory</servlet-name>
+        <servlet-class>servlet.ReaderBorrowServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>BorrowHistory</servlet-name>
+        <url-pattern>/BorrowHistory.do</url-pattern>
+    </servlet-mapping>
+<!--    end -->
 </web-app>
