isbn获取书籍硬编码

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -146,7 +146,7 @@
         </servlet>
     <servlet-mapping>
         <servlet-name>EditReader</servlet-name>
-        <url-pattern>/EditReader.do</url-pattern>
+        <url-pattern>/ReaderEdit.do</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>BookList</servlet-name>
@@ -171,6 +171,14 @@
     <servlet-mapping>
         <servlet-name>BorrowHistory</servlet-name>
         <url-pattern>/BorrowHistory.do</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>ReaderAdd</servlet-name>
+        <servlet-class>servlet.ReaderAddServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ReaderAdd</servlet-name>
+        <url-pattern>/ReaderAdd.do</url-pattern>
     </servlet-mapping>
 <!--    end -->
 </web-app>
