--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -156,5 +156,21 @@
         <servlet-name>DetailSearch</servlet-name>
         <url-pattern>/DetailSearch</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>Order</servlet-name>
+        <servlet-class>servlet.OrderServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Order</servlet-name>
+        <url-pattern>/Order</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>Orderto</servlet-name>
+        <servlet-class>servlet.OrdertoServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Orderto</servlet-name>
+        <url-pattern>/Orderto</url-pattern>
+    </servlet-mapping>
 <!--    end -->
 </web-app>
