--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -243,5 +243,45 @@
         <servlet-name>Orderto</servlet-name>
         <url-pattern>/Orderto</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>NoticePost</servlet-name>
+        <servlet-class>servlet.NoticePostServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>NoticePost</servlet-name>
+        <url-pattern>/NoticePost.do</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>NoticeList</servlet-name>
+        <servlet-class>servlet.NoticeListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>NoticeList</servlet-name>
+        <url-pattern>/NoticeList.do</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>SearchNotice</servlet-name>
+        <servlet-class>servlet.NoticeSearchServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SearchNotice</servlet-name>
+        <url-pattern>/SearchNotice.do</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>DeleteNotice</servlet-name>
+        <servlet-class>servlet.NoticeDeleteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DeleteNotice</servlet-name>
+        <url-pattern>/DeleteNotice.do</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>EditNotice</servlet-name>
+        <servlet-class>servlet.NoticeEditServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>EditNotice</servlet-name>
+        <url-pattern>/EditNotice.do</url-pattern>
+    </servlet-mapping>
 <!--    end -->
 </web-app>
