--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -251,5 +251,13 @@
         <servlet-name>ReaderAccountSetting</servlet-name>
         <url-pattern>/ReaderAccountSetting.do</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>IncomeHistory</servlet-name>
+        <servlet-class>servlet.IncomeHistoryServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>IncomeHistory</servlet-name>
+        <url-pattern>/IncomeHistory.do</url-pattern>
+    </servlet-mapping>
 <!--    end -->
 </web-app>
